<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Generalities -->
    <string name="app_name">Dicționar Latin – Român</string>
    <string name="hello_world">Bine ați venit!</string>
    <string name="action_settings">Setări generale</string>
    <string name="cautare_termen">Căutare cuvânt</string>
    <string name="tv_website">www.limbalatina.ro</string>
    <string name="hint_scrie_aici">Scrieți aici…</string>
    <string name="bt_search">Căutare</string>
    <string name="bt_switch">Inversează limbile</string>
    <string name="switch_direction_accessibility">%1$s. Inversează limbile.</string>
    <string name="bt_close">Închidere</string>
    <string name="bt_ok">OK</string>

    <string-array name="direction_array">
        <item>Căutare în latin – român</item>
        <item>Căutare în român – latin</item>
    </string-array>

    <string name="bt_cancel_search">Golire</string>
    <string name="warning">Avertisment</string>
    <string name="warning_wrong_search">Trebuie să scrieți minimum două caractere pentru a căuta!</string>
    <string name="no_results_heading">Nu a fost găsit niciun rezultat!</string>
    <string name="warning_not_results"><![CDATA[Ați căutat: <i>%1$s</i>.<br>Încercați din nou scriind primele litere ale cuvântului latin.]]></string>
    <string name="warning_not_results_romanian"><![CDATA[Ați căutat: <i>%1$s</i>.<br>Încercați alt cuvânt românesc sau doar o parte a lui.]]></string>
    <string name="tv_word_and_explanation"><![CDATA[<b>%1$s</b> – %2$s]]></string>
    <string name="result_open_paradigm">Afișează paradigma</string>
    <string name="result_show_part_of_speech">Afișează partea de vorbire</string>
    <string name="check_updates_accessibility">Verifică dacă există cuvinte noi</string>
    <string name="results_limit_notice">Se afișează primele %1$d de rezultate.</string>
    <!-- A plurals resource for results: -->
    <plurals name="tv_number_of_results">
        <item quantity="one">A fost găsit un rezultat</item>
        <item quantity="few">Au fost găsite %d rezultate</item>
        <item quantity="other">Au fost găsite %d de rezultate</item>
    </plurals>

    <!-- Parts of speech in an array: -->
    <string-array name="parts_of_speech_array">
        <item>indeterminabil ca parte de vorbire</item>
        <item>substantiv</item>
        <item>pronume</item>
        <item>numeral</item>
        <item>adjectiv</item>
        <item>verb</item>
        <item>prepoziție</item>
        <item>conjuncție</item>
        <item>adverb</item>
        <item>interjecție</item>
    </string-array>

    <!-- An array with all parts of speech articled definitelly: -->
    <string-array name="parts_of_speech_articled_array">
        <item>Indeterminabil</item>
        <item>Substantivul</item>
        <item>Pronumele</item>
        <item>Numeralul</item>
        <item>Adjectivul</item>
        <item>Verbul</item>
        <item>Prepoziția</item>
        <item>Conjuncția</item>
        <item>Adverbul</item>
        <item>Interjecția</item>
    </string-array>

    <!-- The Main Menu Items: -->
    <string name="mnu_settings_submenu">Setări</string>
    <string name="mnu_settings">Generale</string>
    <string name="mnu_display">Dimensiune text</string>
    <string name="mnu_open_send">Propuneți un cuvânt</string>
    <string name="mnu_about">Despre Dicționar</string>
    <string name="mnu_open_help">Ajutor</string>
    <string name="mnu_online_version">Vedeți varianta web</string>
    <string name="mnu_default_settings">Resetare setări</string>
    <string name="title_default_settings">Resetare setări</string>
    <string name="body_default_settings">Sunteți sigur că vreți să readuceți setările la valorile inițiale?\nCuvintele descărcate vor rămâne în dicționar.</string>

    <!-- Settings Activity: -->
    <string name="title_activity_settings">Setări generale</string>
    <string name="enable_sounds">Redare sunete</string>
    <string name="enable_shake">Căutare nouă la scuturare</string>
    <string name="enable_screen_awake">Menținere ecran activ</string>
    <string name="enable_ime_action">Butonul ENTER al tastaturii virtuale caută direct</string>

    <!-- Display Settings Activity: -->
    <string name="title_activity_display_settings">Setări de afișare</string>
    <string name="display_choose_size">Dimensiunea textului rezultatelor:</string>

    <!-- Strings for paradigm class: -->
    <string name="title_part_of_speech">Parte de vorbire</string>
    <string name="body_part_of_speech"><![CDATA[<b>%1$s</b> este %2$s<br><br>Termen inserat <b>%3$s</b>]]></string>
    <string name="paradigm_inflexible_information"><![CDATA[<b>%1$s</b> este o parte de vorbire neflexibilă.]]></string>
    <string name="paradigm_indeterminable_information">Nu se poate determina partea de vorbire pentru a realiza paradigma.</string>
    <!-- An array with all cases for noun: -->
    <string-array name="paradigm_noun_cases_array">
        <item>Nominativ</item>
        <item>Genitiv</item>
        <item>Dativ</item>
        <item>Acuzativ</item>
        <item>Vocativ</item>
        <item>Ablativ</item>
    </string-array>

    <string name="paradigm_declension_title"><![CDATA[Declinare – <i>%1$s</i>]]></string>
    <!-- A template for noun with singular and plural. the place holders 1 means number of declension, 2 singular and 3 plural: -->
    <string name="paradigm_declension_template1"><![CDATA[Substantiv – <b>Declinarea %1$s</b><br><br><b>Singular:</b><br>%2$s<br><b>Plural:</b><br>%3$s]]></string>
    <!-- A template for nouns only with singular, place holder 1 means the declension, and 2 the singular: -->
    <string name="paradigm_declension_template2"><![CDATA[Substantiv – <b>Declinarea %1$s</b><br><br><b>Singular:</b><br>%2$s]]></string>
    <!-- A template for nouns only with plural, place holder 1 means the declension, and 2 the plural: -->
    <string name="paradigm_declension_template3"><![CDATA[Substantiv – <b>Declinarea %1$s</b><br><br><b>Plural:</b><br>%2$s]]></string>
    <string name="paradigm_declension_cannot_be_created"><![CDATA[Din motive tehnice, nu putem declina acest substantiv.<br>În prezent sunt afișate doar paradigme pentru substantivele de declinarea I.]]></string>

    <!-- About dialog: -->
    <string name="about">Despre Dicționar 4.0</string>
    <string name="app_version">Dicționar Latin – Român, versiunea 4.3</string>
    <string name="app_last_update">Ultima actualizare: miercuri, 17 septembrie 2025</string>
    <string name="app_release_date">Versiune 1.0 finalizată vineri, 4 septembrie 2015</string>
    <string name="app_creator">Programat de Emanuel Boboiu (Manu)</string>
    <string name="phone_number">Telefon: +40740203043</string>
    <string name="email_address">E-mail: emanuelboboiu@gmail.com</string>
    <string name="web_address">Web: www.limbalatina.ro</string>
    <string name="app_credits2">Pictogramele și imaginile au fost create de Iulian Duma și Ștefan Halus.</string>
    <string name="app_credits3">Cuvintele au fost introduse manual în baza de date de Marian Dorel Farcaș și Emanuel Boboiu</string>


    <!-- An array string for information: -->
    <string name="mnu_information">Informații</string>
    <string name="information_alert_title">Informații despre dicționar</string>

    <string-array name="information_array">
        <item>Dicționarul de față a fost creat în primă versiune în cadrul postuniversitarului Informatică Aplicată și Programare afiliat Universității Tehnice din Cluj-Napoca, constituind totodată subiectul lucrării de disertație susținută de Emanuel Boboiu în iulie 2015.</item>
        <item>Un punct de pornire a fost constituit de o bază de date cu termeni latini și explicațiile în limba română ale acestora.</item>
        <item>Baza de date mai sus menţionată a fost creată manual de către Marian Dorel Farcaș și Emanuel Boboiu și stă de asemenea în spatele variantei web a dicționarului, aflată la www.dictionar.limbalatina.ro.</item>
        <item>Se pot căuta cuvinte latine prin introducerea primelor litere ale acestora în câmpul de editare aflat în partea de sus a ferestrei principale.</item>
        <item>Se pot căuta și cuvinte în limba română, rezultatele fiind extrase din aceeași bază de date prin căutarea în explicațiile termenilor latini; rezultatele în urma căutării de acest fel vor arăta tot ca celelalte, întâi cuvânt latin, apoi explicație în limba română.</item>
        <item>Atingând unul dintre rezultate, programul va încerca să genereze paradigma termenului latin, după care o va afișa într-un alert.\nSe lucrează la dezvoltarea sistemului de generare paradigme.</item>
        <item>Atingând lung un rezultat, programul va afișa într-un alert partea de vorbire căreia îi aparține termenul latin.</item>
        <item>Oricine poate contribui la îmbunătățirea Dicționarului Latin Român trimițând sugestii, semnalând erori la adresa de E-mail afișată în caseta Despre dicționar accesabilă din meniul aplicației.</item>
    </string-array>

    <!-- New in 2.0: -->
    <string name="mnu_rate">Evaluați aplicația…</string>
    <string name="title_rate_app">Evaluare</string>
    <string name="body_rate_app">Dacă acest dicționar vă este util, vă rugăm să îi dați 5 steluțe în Magazin Google Play.\nMulțumim pentru interesul acordat.</string>
    <string name="bt_rate">Evaluați!</string>
    <string name="bt_not_now">Nu acum!</string>

    <!-- For background settings: -->
    <string name="mnu_background_settings">Alegere fundal</string>
    <string name="title_activity_background">Alegere fundal</string>
    <string name="tv_background_caption">Alegeți un fundal utilizând butoanele de mai jos și salvați-l pe cel care vă place mai mult.</string>
    <string name="tv_background_caption2">Acesta este un text de exemplu, pentru a vedea cum arată pe fundalul ales.</string>
    <string name="tv_current_background">FUNDAL %1$s</string>
    <string name="tv_without_background">FĂRĂ FUNDAL</string>
    <string name="bt_previous_background">&lt;- Anteriorul</string>
    <string name="bt_next_background">Următorul -&gt;</string>
    <string name="bt_save_background">Salvați acest fundal!</string>

    <!-- New in 3.1: -->
    <string name="tv_status_cuvinte_existente">Cuvinte existente</string>
    <string name="warning_db_cannot_be_deleted">Vechea bază de date nu a putut fi ștearsă</string>
    <string name="error_title">Eroare</string>
    <string name="error_unknown">A apărut o eroare necunoscută.</string>
    <string name="info_title">Informație</string>
    <string name="mnu_update">Actualizare</string>
    <string name="no_new_words">Nu au fost găsite cuvinte noi, baza de date din dispozitivul dumneavoastră este la zi.</string>
    <!-- A plurals resource for words added in database, shown in an alert: -->
    <plurals name="tv_added_words">
        <item quantity="one">A fost adăugat %d cuvânt nou.</item>
        <item quantity="few">Au fost adăugate %d cuvinte noi.</item>
        <item quantity="other">Au fost adăugate %d de cuvinte noi.</item>
    </plurals>
    <string name="succes_update">Baza de date a fost actualizată cu succes!\n%1$s\nResponsabil cu inserarea în baza de date este prof. Dorel Farcaș.</string>
    <!-- A plurals resource for words available, the TV found in the bottom part of the main window: -->
    <plurals name="tv_available_words">
        <item quantity="one">Este %d cuvânt</item>
        <item quantity="few">Sunt %d cuvinte</item>
        <item quantity="other">Sunt %d de cuvinte</item>
    </plurals>

    <!-- Strings for date: -->
    <string name="today">azi</string>
    <string name="yesterday">ieri</string>
    <string name="msg_time">Este ora %1$s</string>
    <string name="date_format">%1$s, %2$s %3$s %4$s, %5$s:%6$s</string>
    <string name="old_date_insertion">înainte de 16 aprilie 2010</string>

</resources>
