<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.limbalatina.dictionarlatinroman.MainActivity">

    <item
        android:id="@+id/mnuUpdate"
        android:orderInCategory="200"
        android:title="@string/mnu_update"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuSettingsSubmenu"
        android:orderInCategory="250"
        android:title="@string/mnu_settings_submenu"
        app:showAsAction="ifRoom|withText">

        <!-- Settings submenu: -->
        <menu>
            <item
                android:id="@+id/mnuActionSettings"
                android:orderInCategory="300"
                android:title="@string/mnu_settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/mnuDisplaySettings"
                android:orderInCategory="400"
                android:title="@string/mnu_display"
                app:showAsAction="never" />
            <item
                android:id="@+id/mnuResetDefaults"
                android:orderInCategory="600"
                android:title="@string/mnu_default_settings"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuInformation"
        android:orderInCategory="800"
        android:title="@string/mnu_information"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuAboutDialog"
        android:orderInCategory="900"
        android:title="@string/mnu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="1000"
        android:title="@string/mnu_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuOnlineDictionary"
        android:orderInCategory="1200"
        android:title="@string/mnu_online_version"
        app:showAsAction="never" />

</menu>
