<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="center_vertical|left"
            android:text="@string/tv_background_caption"
            android:textSize="@dimen/text_size_main"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="center_vertical|left"
            android:text="@string/tv_background_caption2"
            android:textSize="@dimen/text_size_main" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCurrentBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:nextFocusDown="@+id/btBackgroundNext"
            android:text="@string/tv_current_background"
            android:textSize="@dimen/text_size_main_plus2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btBackgroundPrevious"
                style="@style/style_main_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:onClick="previousBackgroundButton"
                android:text="@string/bt_previous_background" />

            <Button
                android:id="@+id/btBackgroundNext"
                style="@style/style_main_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="nextBackgroundButton"
                android:text="@string/bt_next_background" />
        </LinearLayout>

        <Button
            android:id="@+id/btBackgroundSave"
            style="@style/style_main_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center_horizontal"
            android:onClick="saveBackgroundButton"
            android:text="@string/bt_save_background" />
    </LinearLayout>

</LinearLayout>