<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="?attr/colorOnPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/cbtSoundsSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_sounds"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbtOnshakeSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_shake"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbtScreenAwakeSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_screen_awake"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cbtImeSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/enable_ime_action"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/buttons_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>